Document and add site

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,24 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^LICENSE\.md$
+^README\.Rmd$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^codemeta\.json$
+^CODE_OF_CONDUCT\.md$
+^README\.Rmd$
+^\.travis\.yml$
+docs/.*
+^codecov\.yml$
+^\.github$
+^\.covrignore$
+prepare_branch.sh
+cran-comments.md
+^doc$
+^Meta$
+^codemeta\.json$
+^_pkgdown\.yml$
+^CRAN-RELEASE$
+^appveyor\.yml$
+.gitattributes
