Try force installing libs

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ r:
   - devel
 os:
   - linux
-  - osx
 jobs:
   exclude:
   - r: devel
     os: osx
+before_script:
+  - sudo apt-get install libcgal-dev libglu1-mesa-dev
 after_success:
     - Rscript -e 'covr::codecov()'
 
