Add rgdal dep and remove unused test files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     rayshader,
     magrittr,
     png,
-    jsonlite
+    jsonlite,
+    rgdal
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0)
