Add build dep for travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ addons:
     packages:
     - libcgal-dev
     - libglu1-mesa-dev
+    - libgdal1-dev
 after_success:
     - Rscript -e 'covr::codecov()'
 
