--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,8 @@
 pandoc: 2.2.3.2
 pkgdown: 1.4.1
 pkgdown_sha: ~
-articles: []
+articles:
+  introduction-to-spacey: introduction-to-spacey.html
 urls:
   reference: https://mikemahoney218.github.io/spacey//reference
   article: https://mikemahoney218.github.io/spacey//articles
