--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,4 +29,7 @@ Imports:
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0),
-    covr
+    covr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
