Allow custom textures, make some myself

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_centroid_bounding_box)
 export(get_coord_bounding_box)
 export(get_heightmap)
 export(get_image_overlay)
+export(get_texture)
 export(load_heightmap)
 export(load_overlay)
 export(rad_to_deg)
