Convert automap to use R6 classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,9 @@ export(get_image_overlay)
 export(get_texture)
 export(load_heightmap)
 export(load_overlay)
+export(make_copy)
 export(rad_to_deg)
+export(spacey_map)
+export(update_values)
+importFrom(R6,R6Class)
 importFrom(magrittr,`%>%`)
