--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,37 +1,41 @@
-Package: spacey
 Type: Package
+Package: spacey
 Title: Easily Obtain Spatial Data and Make Better Maps
-Version: 0.1.1
+Version: 0.1.1.9000
 Authors@R: 
     person(given = "Michael",
            family = "Mahoney",
            role = c("aut", "cre"),
            email = "mike.mahoney.218@gmail.com",
            comment = c(ORCID = "0000-0003-2402-304X"))
-Description: One of the remaining pain points in making beautiful maps via 
-    packages like 'rayshader' is both obtaining and processing spatial data
-    to build from. 'spacey' aims to make it easier to obtain and use this data
-    for locations within the United States, providing utilities to download 
-    'USGS' and 'ESRI' geospatial data and quickly turn it into maps.
+Description: One of the remaining pain points in making
+    beautiful maps via packages like 'rayshader' is both obtaining and
+    processing spatial data to build from. 'spacey' aims to make it easier
+    to obtain and use this data for locations within the United States,
+    providing utilities to download 'USGS' and 'ESRI' geospatial data and
+    quickly turn it into maps.
 License: MIT + file LICENSE
-URL: https://github.com/mikemahoney218/spacey, https://mikemahoney218.github.io/spacey/
+URL: https://github.com/mikemahoney218/spacey,
+    https://mikemahoney218.github.io/spacey/
 BugReports: https://github.com/mikemahoney218/spacey/issues
-Encoding: UTF-8
-LazyData: true
 Imports: 
+    future,
     httr,
-    raster,
-    rayshader,
+    jsonlite,
     magrittr,
     png,
-    jsonlite,
+    R6,
+    raster,
+    rayshader,
     rgdal
-RoxygenNote: 7.0.2
 Suggests: 
-    testthat (>= 2.1.0),
     covr,
     knitr,
+    pkgload,
     rmarkdown,
-    future,
-    pkgload
-VignetteBuilder: knitr
+    testthat (>= 2.1.0)
+VignetteBuilder: 
+    knitr
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.1.0
