--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: 2.2.3.2
-pkgdown: 1.4.1
+pkgdown: 1.5.0
 pkgdown_sha: ~
 articles:
   introduction-to-spacey: introduction-to-spacey.html
+last_built: 2020-03-28T15:57Z
 urls:
   reference: https://mikemahoney218.github.io/spacey//reference
   article: https://mikemahoney218.github.io/spacey//articles
